pkg/lang/testdata/ub/constraints/valid/check-predicate-when-true-require-ok.ub
constraints: [
  {
    kind:    predicate
    when:    input.region == 'us-gov-east-1'
    require: input.fips-mode == true
  },
]
