pkg/lang/testdata/ub/constraints/invalid/predicate-missing-when.ub
constraints: [
  { kind: predicate, require: 'true' },
]
